Fix empty blocks being collapsed

--- a/packages/ui/src/main.module.pcss
+++ b/packages/ui/src/main.module.pcss
@@ -16,6 +16,10 @@
   svg {
     max-height: 100%;
   }
+
+  [contenteditable]:empty:after {
+    content: "\feff";
+  }
 }
 
 .paragraph {
